styles: fixed Projects MDX and Contenlayer

--- a/content/projects/change.mdx
+++ b/content/projects/change.mdx
@@ -1,6 +1,8 @@
 ---
 title: Change me!
 date: 2022-03-11
+image: https://i.imgur.com/XJjY44Q.jpeg
+description: This is a description of the page
 ---
 
 When you change a source file, Contentlayer automatically updates the content cache, which prompts Next.js to reload the content on screen.
