fix: fixed Projects Meta Type

--- a/content/projects/what-is-contentlayer.mdx
+++ b/content/projects/what-is-contentlayer.mdx
@@ -1,8 +1,13 @@
 ---
-title: What is Contentlayer?
-date: 2022-02-22
+title: Contentlayer
 image: https://i.imgur.com/XJjY44Q.jpeg
-description: Contentlayer is a content preprocessor that validates and transforms your content into type-safe JSON you can easily import into your application.
+description: Contentlayer makes working with content easy. It is a content preprocessor that validates and transforms your content into type-safe JSON you can easily import into your application.
+time: 2021-10
+tags: ["contentlayer", "content", "json"]
+url: https://contentlayer.io/
+published: true
 ---
+
+# Contentlayer
 
 **Contentlayer makes working with content easy.** It is a content preprocessor that validates and transforms your content into type-safe JSON you can easily import into your application.
