styles: updated blogs and Project page/slug

--- a/content/projects/dummy.mdx
+++ b/content/projects/dummy.mdx
@@ -1,5 +1,5 @@
 ---
-title: Contentlayer
+title: Nextjs Contentlayer
 image: https://i.imgur.com/XJjY44Q.jpeg
 description: Contentlayer makes working with content easy. It is a content preprocessor that validates and transforms your content into type-safe JSON you can easily import into your application.
 time: 2021-10
@@ -7,6 +7,6 @@ tags: ["contentlayer", "content", "json"]
 url: https://contentlayer.io/
 ---
 
-# Contentlayer
+## Contentlayer
 
-**Contentlayer makes working with content easy.** It is a content preprocessor that validates and transforms your content into type-safe JSON you can easily import into your application.
+Contentlayer makes working with content easy. It is a content preprocessor that validates and transforms your content into type-safe JSON you can easily import into your application.
