styles: fixed dark mode mdx content

--- a/content/blogs/dummy.mdx
+++ b/content/blogs/dummy.mdx
@@ -8,6 +8,17 @@ updatedAt: 2023-12-18
 publishedAt: 2023-12-18
 ---
 
-## This is dummy Blog Added by me
+# Blue Everest
 
-This is dummy Blog Added by me for testing purpose only
+Blue Everest is a digital agency that helps businesses with their digital transformation.
+
+## Features
+
+- **NextJS** - The website is built using NextJS.
+- **TailwindCSS** - The website is styled using TailwindCSS.
+- **Typescript** - The website is written in Typescript.
+- **Internationalization** - The website is available in English and Arabic.
+- **Blogs** - The website has a blog section where the company can post articles.
+- **MDX** - The blog posts are written in MDX.
+- **SEO** - The website is optimized for search engines.
+- **Responsive** - The website is responsive and works on all devices.
