--- a/content/projects/blueeverest.mdx
+++ b/content/projects/blueeverest.mdx
@@ -33,15 +33,40 @@ Blue Everest is a digital agency that helps businesses with their digital transf
 
 ## Screenshots
 
-![Hero Section](/assets/projects/blueeverest/image.png)
+<Image
+  src='/assets/projects/blueeverest/image.png'
+  alt='hero section'
+  width={2580}
+  height={1691}
+/>
 
-![Latest Blogs Section](/assets/projects/blueeverest/1.png)
+<Image
+  src='/assets/projects/blueeverest/1.png'
+  alt='latest blogs section'
+  width={2580}
+  height={1691}
+/>
 
-![Services Section](/assets/projects/blueeverest/2.png)
+<Image
+  src='/assets/projects/blueeverest/2.png'
+  alt='services section'
+  width={2580}
+  height={1691}
+/>
 
-![Blogs Page](/assets/projects/blueeverest/3.png)
+<Image
+  src='/assets/projects/blueeverest/3.png'
+  alt='blogs page'
+  width={2580}
+  height={1691}
+/>
 
-![Contact Page](/assets/projects/blueeverest/4.png)
+<Image
+  src='/assets/projects/blueeverest/4.png'
+  alt='contact page'
+  width={2580}
+  height={1691}
+/>
 
 ## Links
 
