styles: Updated Blueeverest mdx

--- a/content/projects/blueeverest.mdx
+++ b/content/projects/blueeverest.mdx
@@ -16,9 +16,11 @@ tags:
 url: https://blueeverest.vercel.app/en
 ---
 
-# Blue Everest
+## Introduction
 
-Blue Everest is a digital agency that helps businesses with their digital transformation.
+Blue Everest is a digital agency that helps businesses with their digital transformation. The website is built using NextJS, TailwindCSS, Typescript, and MDX.
+
+The website is available in English and Arabic. The website has a blog section where the company can post articles. The blog posts are written in MDX. The website is optimized for search engines. The website is responsive and works on all devices.
 
 ## Features
 
@@ -72,3 +74,7 @@ Blue Everest is a digital agency that helps businesses with their digital transf
 
 - [Website](https://blueeverest.vercel.app/en)
 - [Source Code (Private)](#)
+
+#### Note to the reader
+
+This website is still under development. So some of the features mentioned above might not be working perfectly. If you find any bugs or have any suggestions, please let me know.
