--- a/content/projects/blueeverest.mdx
+++ b/content/projects/blueeverest.mdx
@@ -1,7 +1,7 @@
 ---
 title: Blue Everest - Digial Solutions for your Business
 image: /assets/projects/blueeverest/image.png
-description: Blue Everest is a digital agency that helps businesses with their digital transformation. The website is built using NextJS, TailwindCSS, Typescript, and MDX.
+description: A digital agency that helps businesses with their digital transformation.
 time: 2023-10
 tags:
   [
