chore: alt for images

--- a/content/projects/portfolio-nextjs.mdx
+++ b/content/projects/portfolio-nextjs.mdx
@@ -40,28 +40,28 @@ It is a great tool to manage the content of the website, Used Framer Motion for 
 
 <Image
   src='/assets/projects/portfolio-nextjs/image.png'
-  alt='hero section'
+  alt='Main Page'
   width={2580}
   height={1691}
 />
 
 <Image
   src='/assets/projects/portfolio-nextjs/1.png'
-  alt='technology section'
+  alt='Projects Page'
   width={2580}
   height={1691}
 />
 
 <Image
   src='/assets/projects/portfolio-nextjs/2.png'
-  alt='Contact section'
+  alt='About Page'
   width={2580}
   height={1691}
 />
 
 <Image
   src='/assets/projects/portfolio-nextjs/3.png'
-  alt='technology section'
+  alt='Websocket Presence Page'
   width={2580}
   height={1691}
 />
