--- a/content/projects/desh-videsh-travels.mdx
+++ b/content/projects/desh-videsh-travels.mdx
@@ -1,7 +1,7 @@
 ---
 title: Desh Videsh Travels
 image: /assets/projects/desh-videsh-travels/image.png
-description: Worked as a Fullstack Software Developer and Contributed to the Development of the Website. SEO Optimizations, Content Mangement, and Redesigning, Maintainance and Adding New Features to the Website.
+description: Contributed as a Fullstack Software Developer and Contributed to the Development of the Website. SEO Optimizations, Content Mangement, and Redesigning, Maintainance and Adding New Features to the Website.
 time: 2024-06-25
 tags:
   [
@@ -76,12 +76,6 @@ Working in a startup environment has been a great learning experience for me. I 
   alt='Insta Content Section'
   width={2580}
   height={1691}
-/>
-<Image
-  src='/assets/projects/desh-videsh-travels/mobile.png'
-  alt='Mobile Navbar'
-  height={2000}
-  width={1000}
 />
 <Image
   src='/assets/projects/desh-videsh-travels/blog.png'
