--- a/content/projects/desh-videsh-travels.mdx
+++ b/content/projects/desh-videsh-travels.mdx
@@ -1,7 +1,7 @@
 ---
 title: Desh Videsh Travels
 image: /assets/projects/desh-videsh-travels/image.png
-description: Contributed as a Fullstack Software Developer and Contributed to the Development of the Website. SEO Optimizations, Content Mangement, and Redesigning, Maintainance and Adding New Features to the Website.
+description: At Desh Videsh Travels I Worked on the Development and Design of the Website. The Website is Built using Latest and Mordern Technologies Like NextJS, TailwindCSS, and Typescript. The Website is Using Strapi as CMS for Managing Content Real-time.
 time: 2024-06-25
 tags:
   [
