styles: blogs ui

--- a/content/blogs/tailwind-buttons.mdx
+++ b/content/blogs/tailwind-buttons.mdx
@@ -28,9 +28,7 @@ Today We are Going to Create Same Animated Buttons Using TailwindCSS. These Butt
 
 Best thing about these Button is that you can use them in any project. If you are using Basic HTML, React, Next.js or any other framework, you can just copy the code and use it in your project.
 
-#### Lets Start with the First Button
-
-A Simple Button with Hover Effect of Wrapper on Alternative Corners of the Button.
+#### Lets Start with the First Button, Here's how to create our first button.
 
 <ComponentPreviewCode
   section='tailwind-buttons'
@@ -57,6 +55,12 @@ export default function Button() {
 ```
 </ComponentPreviewCode>
 
+This button uses TailwindCSS classes to create a smooth hover animation, revealing a dynamic wrapper effect on alternating corners. It's perfect for call-to-action buttons or any interactive element on your website.
+
+#### The Shine Hover Effect Button
+
+Next, let's create a button with a shine effect that adds a dynamic and attractive hover animation.
+
 <ComponentPreviewCode
   section='tailwind-buttons'
   name='tailwind-shine'
@@ -79,6 +83,12 @@ export default function Button() {
 ```
 </ComponentPreviewCode>
 
+This button showcases a multi-layered shine effect, creating a visually appealing animation that grabs the user's attention. The effect is achieved using TailwindCSS's transition and transform utilities.
+
+#### The 3D Button Click Effect
+
+Finally, let's create a button with a 3D click effect that adds depth and a unique interaction experience.
+
 <ComponentPreviewCode
   section='tailwind-buttons'
   name='tailwind-3d'
@@ -95,3 +105,7 @@ export default function Button() {
 }
 ```
 </ComponentPreviewCode>
+
+This button uses TailwindCSS classes to create a hover effect that makes the button appear to pop out in 3D. It's a great addition to any website looking to enhance its user interface with engaging animations.
+
+Also, Feel free to customize these buttons further to match the style and theme of your project. TailwindCSS makes it easy to tweak colors, sizes, and animations to fit your needs perfectly. Happy coding!
