styles: New Blog | Metadata SEO

--- a/content/blogs/tailwind-buttons.mdx
+++ b/content/blogs/tailwind-buttons.mdx
@@ -1,5 +1,5 @@
 ---
-title: Trending Animated Tailwind Buttons
+title: 3 Trending Animated Tailwind Buttons 2024
 image: /assets/projects/tailwind-buttons/image.png
 description: A collection of animated buttons built using TailwindCSS for your next project. Easy to customize and copy to your project.
 tags:
